# AgriBuddy_hackathon

AgriBuddy/AgriBuddy/: README.md  app.yaml  pyproject.toml  requirements-app.txt  requirements.txt
AgriBuddy/AgriBuddy/app/: main.py
AgriBuddy/AgriBuddy/config/: language_codes.json
AgriBuddy/AgriBuddy/data/: crop_mandi_map.json
AgriBuddy/AgriBuddy/notebooks/01_ingestion/: 01_autoloader_bronze.py
AgriBuddy/AgriBuddy/notebooks/02_transforms/: 01_bronze_to_silver.py  02_price_features.py
AgriBuddy/AgriBuddy/notebooks/03_ml/: 01_prophet_training.py  02_backtesting.py  03_mlflow_register.py
AgriBuddy/AgriBuddy/notebooks/04_rag/: 01_pdf_chunking.py  02_embed_and_index.py
AgriBuddy/AgriBuddy/notebooks/07_pipeline/: 01_master_pipeline.py
AgriBuddy/AgriBuddy/src/croppulse/: chart_utils.py  config.py  decision_engine.py  delta_utils.py  genie_client.py  llm_client.py  rag_retrieval.py  sarvam_client.py  weather_utils.py
AgriBuddy/AgriBuddy/tests/: test_decision_engine.py  test_rag_retrieval.py  test_translation.py
