[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "croppulse"
version     = "0.1.0"
description = "AI-powered agricultural advisor for Indian smallholder farmers"
requires-python = ">=3.10"

dependencies = [
    "gradio==4.44.1",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "prophet>=1.1.5",
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.8.0",
    "pymupdf>=1.24.0",
    "mlflow>=2.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.ruff]
line-length = 100
